WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211541
Fix assertions seen when trying to draw an absurdly large shadow
https://bugs.webkit.org/show_bug.cgi?id=211541
Summary
Fix assertions seen when trying to draw an absurdly large shadow
Darin Adler
Reported
2020-05-06 18:14:36 PDT
Fix assertions seen when trying to draw an absurdly large shadow
Attachments
Patch
(5.40 KB, patch)
2020-05-06 18:31 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2020-05-06 18:31:52 PDT
Created
attachment 398692
[details]
Patch
Geoffrey Garen
Comment 2
2020-05-06 22:09:37 PDT
Comment on
attachment 398692
[details]
Patch r=me
EWS
Comment 3
2020-05-07 09:00:59 PDT
Committed
r261291
: <
https://trac.webkit.org/changeset/261291
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398692
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-05-07 09:01:14 PDT
<
rdar://problem/62978479
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug