Fix assertions seen when trying to draw an absurdly large shadow https://bugs.webkit.org/show_bug.cgi?id=211541 rdar://62843377

Reviewed by Geoffrey Garen.

* platform/graphics/IntSize.h:
(WebCore::IntSize::unclampedArea const): Return uint64_t instead of
size_t. Two 32-bit positive integers multiplied fit in a 64-bit integer,
but there's no guarantee they fit in a "pointer sized" integer.

* platform/graphics/ShadowBlur.cpp:
(WebCore::ShadowBlur::drawRectShadow): When comparing an IntSize area with
a FloatSize area, avoid checked overflow by using IntSize::unclampedArea,
which returns something we can compare with a float. Using IntSize::area
meant we'd intentionally crash the process if the area number doesn't fit
in a 32-bit int, which is not important or helpful.
(WebCore::ShadowBlur::drawRectShadowWithTiling): Make sure
ScratchBuffer::scheduleScratchBufferPurge is always called after
ScratchBuffer::getScratchBuffer, even it returns nullptr. An alternative
would have been to change the logic inside getScratchBuffer, but this
seems easier to get right, and no need to optimize the failure case.
(WebCore::ShadowBlur::drawInsetShadowWithTiling): Ditto.


Canonical link: https://commits.webkit.org/224464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261291 268f45cc-cd09-0410-ab3c-d52691b4dbfc