Source/WebCore/platform/graphics/IntSize.h
@@ -136,9 +136,9 @@ public:
         return Checked<unsigned, T>(abs(m_width)) * abs(m_height);
     }
 
-    size_t unclampedArea() const
+    uint64_t unclampedArea() const
     {
-        return static_cast<size_t>(abs(m_width)) * abs(m_height);
+        return static_cast<uint64_t>(abs(m_width)) * abs(m_height);
     }
 
     int diagonalLengthSquared() const
